# lightdm-mini-greeter

./: .editorconfig  .ycm_extra_conf.py  CHANGELOG.md  CMakeLists.txt  Makefile.am  Makefile.in  README.md  README.mkd  callbacks.c  config.h.in  configure  configure.ac  main.c  utils.c  utils.h
data/: lightdm-mini-greeter.conf  lightdm-mini-greeter.desktop
debian/: changelog  control  copyright  lightdm-mini-greeter.postinst  lightdm-mini-greeter.prerm  postinst  prerm  rules
include/: app.h  callbacks.h  config.h  ui.h
src/: app.c  app.h  callbacks.c  callbacks.h  compat.c  compat.h  config.c  config.h  focus_ring.c  focus_ring.h  main.c  ui.c  ui.h  utils.c  utils.h
